Fix mobile header alignment

--- a/src/components/AddToListModal.module.css
+++ b/src/components/AddToListModal.module.css
@@ -127,7 +127,7 @@
     }
 
     .modalHeader h3 {
-        text-align: center;
+        text-align: left;
     }
 
     .modalBody {
