--- a/src/components/FilterModal.module.css
+++ b/src/components/FilterModal.module.css
@@ -249,7 +249,7 @@
     }
 
     .modalHeader h3 {
-        text-align:center;
+        text-align:left;
     }
 
     .modalBody {
